# duvet

./: .gitignore  Cargo.toml  duvet.toml
cargo-duvet/: Cargo.toml
cargo-duvet/src/: main.rs  manifest.rs  process.rs  project.rs
cargo-duvet/src/test/: list.rs
duvet/: Cargo.toml  DESIGN.md
duvet-core/: Cargo.toml
duvet-core/examples/line-count/: Cargo.toml
duvet-core/examples/line-count/src/: main.rs
duvet-core/src/: analyze.rs  api.rs  db.rs  error.rs  intern.rs  lib.rs  manifest.rs  report.rs  vfs.rs
duvet-core/src/analyze/: mapper.rs  reducer.rs  reporter.rs
duvet/src/: analysis.rs  attribute.rs  citation.rs  citation_type.rs  coverage.rs  db.rs  entity.rs  error.rs  export.rs  fs.rs  highlight.rs  html.rs  ietf.rs  lib.rs  linemap.rs  llvm_coverage.rs  main.rs  manifest.rs  marker.rs  notification.rs  old.rs  region.rs  report.rs  reporters.rs  rust_src.rs  schema.rs  schema.sql  source.rs  static_intern.rs  types.rs
duvet/src/analysis/: annotation.rs  tokenizer.rs
duvet/src/analysis/snapshots/: duvet__analysis__tokenizer__tests__basic.snap  duvet__analysis__tokenizer__tests__configured.snap  duvet__analysis__tokenizer__tests__duplicate_meta.snap  duvet__analysis__tokenizer__tests__empty.snap  duvet__analysis__tokenizer__tests__only_unnamed.snap
duvet/src/citation/: idset.rs  rangemap.rs  spec.rs  token.rs  tree.rs  types.rs
duvet/src/citation/snapshots/: duvet__citation__rangemap__tests__contiguous.snap  duvet__citation__rangemap__tests__contiguous_reverse.snap  duvet__citation__rangemap__tests__empty.snap  duvet__citation__rangemap__tests__multiple.snap  duvet__citation__rangemap__tests__multiple_reverse.snap  duvet__citation__rangemap__tests__nested.snap  duvet__citation__rangemap__tests__non_contiguous.snap  duvet__citation__rangemap__tests__overlap.snap  duvet__citation__rangemap__tests__single.snap  duvet__citation__token__tests__basic.snap  duvet__citation__token__tests__configured.snap  duvet__citation__token__tests__duplicate_meta.snap  duvet__citation__token__tests__empty.snap  duvet__citation__token__tests__only_unnamed.snap  duvet__citation__tree__tests__all__tokens.snap  duvet__citation__tree__tests__all__tree.snap  duvet__citation__tree__tests__any__tokens.snap  duvet__citation__tree__tests__any__tree.snap  duvet__citation__tree__tests__any_all__tokens.snap  duvet__citation__tree__tests__any_all__tree.snap  duvet__citation__tree__tests__not__tokens.snap  duvet__citation__tree__tests__not__tree.snap  duvet__citation__tree__tests__simple__tokens.snap  duvet__citation__tree__tests__simple__tree.snap  duvet__citation__tree__tests__xor__tokens.snap  duvet__citation__tree__tests__xor__tree.snap  duvet__citation__tree__tests__xor_any__tokens.snap  duvet__citation__tree__tests__xor_any__tree.snap
duvet/src/coverage/: llvm.rs
duvet/src/html/: template.html
duvet/src/manifest/: schema.rs
duvet/src/manifest/schema/: v1.rs
duvet/src/snapshots/: duvet__ietf__tests__rfc2616.snap  duvet__ietf__tests__rfc8446.snap  duvet__ietf__tests__rfc9000.snap  duvet__ietf__tests__rfc9001.snap  duvet__report__tests__overlap.snap
duvet/tests/: foo.rs
