[package]
name = "cargo-duvet"
version = "0.1.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
atty = "0.2"
duvet = { version = "0.1", path = "../duvet" }
prodash = { version = "12", features = ["render-line", "render-line-crossterm", "render-tui", "render-tui-crossterm"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
tokio = { version = "1", features = ["macros", "rt"] }
