[package]
name = "cargo-duvet"
version = "0.1.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
atty = "0.2"
duvet = { version = "0.1", path = "../duvet" }
indicatif = "0.15.0"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
