[package]
name = "duvet"
version = "0.1.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "Rich code coverage"
license = "MIT"
edition = "2018"

[features]
default = ["llvm-coverage", "fetch", "rust-src"]
llvm-coverage = ["rustc-demangle", "serde/derive", "serde_json", "serde_tuple"]
fetch = ["reqwest"]
rust-src = ["proc-macro2", "syn"]

[dependencies]
anyhow = "1"
byteorder = "1"
const-sha1 = "0.2"
proc-macro2 = { version = "1", features = ["span-locations"], optional = true }
rayon = "1"
reqwest = { version = "0.11", features = ["blocking"], optional = true }
rustc-demangle = { version = "0.1", optional = true }
serde = { version = "1" }
serde_json = { version = "1", optional = true }
serde_tuple = { version = "0.5", optional = true }
sled = "0.34"
syn = { version = "1", features = ["full", "extra-traits", "visit"], optional = true }
zerocopy = "0.3"

[dev-dependencies]
bolero = "0.6"
insta = "1"
