[package]
name = "duvet"
version = "0.1.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "Rich code coverage"
license = "MIT"
edition = "2018"

[dependencies]
anyhow = "1"
globset = "0.4"
duvet-core = { version = "0.1", path = "../duvet-core" }
rayon = "1"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1" }
serde_json = { version = "1", optional = true }
tempdir = "0.3"
toml = "0.5"
v_htmlescape = "0.13"
v_jsonescape = "0.5"

[dev-dependencies]
bolero = "0.6"
insta = "1"
